crates/ir/tests/snapshots/lower_test__closures__closure_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module closures__closure_basic

declare println: (m) -> Unit

fn main() -> Unit =
  let v0: (Int) -> Int = make_closure(lambda$48, [])
  let v3: Int = call_closure v0(5)
  let v4: Unit = call println(v3)
  v4

fn lambda$48(v1: Int) -> Int =
  let v2: Int = add_int(v1, 1)
  v2
