crates/ir/tests/snapshots/lower_test__closures__closure_capture.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module closures__closure_capture

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (m) -> Unit

fn main() -> Unit =
  let v0: ~Int = 10
  let v1: ~(Int) -> Int = make_closure(lambda$26, [v0])
  let v6: Int = call_closure v1(5)
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Unit = call println(v5, v6)
  v7

fn lambda$26(v2: ~Int, v3: Int) -> Int =
  let v4: Int = add_int(v3, v2)
  v4
