crates/ir/tests/snapshots/lower_test__closures__lazy_own_demanding_use.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module closures__lazy_own_demanding_use

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn consume(v0: ~String) -> String =
  v0

fn test() -> String =
  let v1: ~String = "hello"
  let v2: ~() -> String = make_closure(lambda$25, [v1])
  let v5: String = call_closure v2()
  v5

fn lambda$25(v3: ~String) -> String =
  let v4: String = call consume(v3)
  v4
